--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -4,7 +4,7 @@ RUN apt update
 RUN apt install -y gettext
 
 ENV WORKPATH /app
-WORKDIR $WORKPATH
+WORKDIR $WORKPATH/src
 
 COPY ./requirements /app/requirements/
 RUN pip install -r /app/requirements/base.txt
