Add test dependencies

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -7,6 +7,7 @@ ENV WORKPATH /app
 WORKDIR $WORKPATH/src
 
 COPY ./requirements /app/requirements/
+RUN pip install --upgrade pip
 RUN pip install -r /app/requirements/base.txt
 
 COPY ./src/ $WORKPATH/src
