--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -13,3 +13,19 @@ services:
       - ./local.env
     ports:
       - 8000:8000
+    links:
+      - db
+  db:
+    restart: always
+    image: postgres
+    volumes:
+      - pgdata:/var/lib/postgresql/data
+    env_file:
+      - ./local.env
+    expose:
+      - "5432"
+    ports:
+      - "5432:5432"
+
+volumes:
+  pgdata:
