--- a/docker/local.env
+++ b/docker/local.env
@@ -1,2 +1,7 @@
 DEBUG=True
 SECRET_KEY=blasdsadasdasd
+POSTGRES_DB={{ project_name }}
+DB_NAME={{ project_name }}
+DB_USER=postgres
+DB_PASSWORD=postgres
+DB_HOST=db
